--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -10,7 +10,7 @@
 }
 
 .cardFront {
-  z-index: 30;
+  z-index: 40;
   /* position: relative; */
   margin-right: 5rem;
 }
@@ -26,8 +26,15 @@
 }
 
 @media all and (max-width: 768px) {
-  /* .cardFront {
+  .cardFront {
     max-width: 100%;
-    margin-right: 1rem;
-  } */
+    margin-top: -100px;
+    margin-left: 1em;
+  }
+
+  .cardBack {
+    max-width: 100%;
+    margin-top: -49vh;
+    margin-left: 12em;
+  }
 }
